--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ SEKRET_KEY = "topaolmaysanda!"
 TIME = "24h"
 PASSWORDS = "muhammadali5025"
 SEKRET_KEY_ADMIN = "topaolmaysanda__!"
+TWILIO_ACCOUNT_SID = "AC478e659728330e995137801094a786bb"
+TWILIO_AUTH_TOKEN = "AC478e659728330e995137801094a786bb"
